# vesuvio

./: .gitignore  .pre-commit-config.yaml  BaD2_3_600C.py  BaH2_25C.py  BaH2_400C.py  BaH2_500C.py  BaH2_600C.py  BaH2_725C.py  CMakeLists.txt  D_HMT.py  MANIFEST.in  Mantid.user.properties  README.md  USERGUIDE.md  boot_analysis.py  bootstrap_IC.py  config.flake8  environment.yml  global_fit_analysis.npz  install-requirements.txt  legacy_tst_runner.py  meta.yaml  original_inputs.py  pyproject.toml  run_comparison_with_old_script.py  run_tests.py  setup.cfg  setup.py  starch_80_RD.py  sym_work.py  test-requirements.txt  vesuvio-dev.yml
.github/workflows/: ci_tests_nightly.yml  deploy_conda_main.yml  deploy_conda_nightly.yml  deploy_package_nightly.yml  pr_analysis_tests.yml  pr_calibration_tests.yml  pr_workflow.yml  tests_nightly.yml  tests_nightly_linux.yml  tests_nightly_windows.yml  tests_pr.yml
EVSVesuvio/: __init__.py  analysis_runner.py  original_inputs.py
EVSVesuvio/config/: analysis_inputs.py  vesuvio.user.properties
EVSVesuvio/examples/: BaH2_500C.py  D_HMT.py  starch_80_RD.py
EVSVesuvio/original_analysis/: Original_adapted_fwrd_script.py  compare_current_with_original_results.py
EVSVesuvio/original_scripts/: Original_adapted_bckwd_script.py
EVSVesuvio/scripts/: __init__.py  handle_config.py
EVSVesuvio/system_tests/: stored_boot_back.npz  stored_boot_front.npz  test_analysis.py  test_bootstrap.py  test_jackknife.py  test_old_new_comparison.py  test_yspace_fit.py  test_yspace_fit_GC.py  tests_IC.py
EVSVesuvio/vesuvio_analysis/: ICHelpers.py  analysis_functions.py  bootstrap.py  bootstrap_analysis.py  fit_in_yspace.py  procedures.py  run_script.py
backward/: Final_optimized_bckwd_script.py  Original_adapted_bckwd_script.py  current_testing.py  fitting_synthetic_ncp.ipynb  snakeviz_testing.ipynb  test_one_iter_vs_original.py  testing_new_optimization.py
backward/.ipynb_checkpoints/: snakeviz_testing-checkpoint.ipynb  testing_synthetic_results-checkpoint.ipynb
backward/input_ws/: CePtGe12_100K_DD_empty.nxs
backward/runs_data/: opt_spec3-134_iter4_ncp_nightlybuild.npz  opt_spec3-134_iter4_ncp_nightlybuild_synthetic.npz  opt_spec3-134_iter4_ncp_nightlybuild_synthetic_fit.npz
backward/script_runs/: opt_spec3-134_iter4_ncp.npz  opt_spec3-134_iter4_ncp_nightlybuild_clean.npz  opt_spec3-134_iter4_ncp_nightlybuild_cleanest.npz  opt_spec3-134_iter4_ncp_nightlybuild_synthetic.npz  ori_spec3-134_iter4_ncp.npz  testing_syn_ncp.npz
backward/tests/: Final_debug_tests.ipynb  test_one_iter_vs_opt_nightlybuild.py  test_one_iter_vs_original.py  test_one_iter_vs_original_script.py  test_synthetic_ncp.py  test_synthetic_ncp_fits.py
backward/tests_scripts/: Kinematics_simple_exercise.py  convert_to_yspace_sym_test_2.py  subtract_other_masses_test.py
bootstrap/: bootstrap_simple_ex.py
buildconfig/CMake/: Bootstrap.cmake  CommonSetup.cmake
comparison_with_old_script/: Original_adapted_bckwd_script.py  Original_adapted_fwrd_script.py
comparison_with_old_script/original_and_current_data/: compare_current_with_original_results.py
conda/: conda_build_config.yaml  meta.yaml
examples/: BaH2_500C.py
experiments/: directories_helpers.py
experiments/D_HMT/: running_times.txt
experiments/bootstrap_IC/: back_bootstrap.npz  boot_analysis.py  bootstrap_quick_back_20.npz  bootstrap_quick_back_5.npz  bootstrap_slow_back_20.npz  bootstrap_slow_back_5.npz  front_bootstrap.npz  front_bootstrap_test.npz
experiments/original_inputs/: Original_adapted_bckwd_script.py  Original_adapted_fwrd_script.py  compare_current_with_original_results.py
experiments/tests/: running_times.txt
forward/: Final_optimized_bckwd_script.py  Optimized_fwd_script.py  Original_adapted_fwrd_script.py  numerical_convolution.py  scribles.py  test_gamma_correction.py
forward/figures_poster/: Optimized_for_kinematics_results.py
forward/tests/: mantid_simple_gaussian_fit.py  mantid_test_fit_in_y_space.py  matid_script_test_convertToYSpaceAndSym.py  prepare_ws_in_yspace.py  sorting_out_convolution.py  test_H_double_gaussian_fit_yspace.py  test_H_fit_yspace.py  test_H_simple_gaussian_fit_yspace.py  test_cleaning_work.py  test_convertToYSpaceAndSym.py  test_gamma_original.py  test_mantid_resolution.py  test_one_iter_vs_original.py  test_prepare_ws_in_yspace_vs_original.py  test_sub_masses.py
joint/: Optimized_joint_script.py  Original_adapted_bckwd_script.py  Original_adapted_fwrd_script.py  build_init_pars.py  run_opt_script.py
joint/input_ws/: starch_80_RD_raw_forward.nxs
joint/tests/: test_cleaning_work.py  test_one_iter_vs_original.py  test_optimized_vs_original.py
legacy/examples/: BaH2_500C.py  D_HMT.py  run_routine.py
legacy/original_analysis/: Original_adapted_bckwd_script.py  Original_adapted_fwrd_script.py  compare_current_with_original_results.py  process_inputs.py
legacy/vesuvio_calibration/: Mantid Vesuvio calibration.opj  Mantid_Vesuvio_calibration.pptx  Python_Vesuvio_calibration.pptx  VesuvioGeometryEnergyResolution_MK1.py  weighted_average.py
mvesuvio/: __init__.py  analysis_runner.py
mvesuvio/config/: analysis_inputs.py
mvesuvio/scripts/: handle_config.py
mvesuvio/system_tests/: ncp_fits_inputs.py  stored_spec_144-182_iter_0_GC_MS.npz  stored_spec_144-182_iter_3_GC_MS.npz  test_analysis.py  test_ncp_fits.py  test_old_new_comparison.py  test_yspace_fit.py  test_yspace_fit_GC.py  wsFinal_ncp_0_cloned.nxs  wsFinal_ncp_sum_cloned.nxs
mvesuvio/vesuvio_analysis/: ICHelpers.py  analysis_functions.py  fit_in_yspace.py
runner/ansible/: github-runner.yml  inventory.txt  requirements.yml
runner/docker/: runner.Dockerfile
scripts/: test.py
scripts_not_in_use/backward/: Final_optimized_bckwd_script.py  Original_adapted_bckwd_script.py  testing_new_optimization.py
system_tests/: test_analysis.py  test_bootstrap.py  test_jackknife.py  test_runner.py  test_yspace_fit_GC.py  tests_IC.py
unpackaged/: run_bootstrap.py
vesuvio_analysis/: ICHelpers.py  directories_helpers.py  test_copy_results.py
working_folder/: run_comparison_with_old_scrip.py  run_tests.py
(+1032 files in other folders)
