[build-system]
requires = ["setuptools >= 65.0.0",
            "wheel",
            "versioningit",]
build-backend = "setuptools.build_meta"

[project]
name = "mvesuvio"
dynamic = ["version"]
authors = [
  {name = "The Mantid Project", email = "mantid-help@mantidproject.org"},
  {name = "Guilherme Pereira", email = "gui.maciel-pereira@stfc.ac.uk"},
  {name = "More Credit", email = "here@stfc.ac.uk"},
]
description = "Analyse Vesuvio instrument data"
readme = "README.md"
requires-python = "==3.8.*"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib",
    "iminuit",
    "h5py",
    "jacobi==0.4.2",
]

[project.optional-dependencies]
tests_require = [
    "coverage",
    "mock>=2.0",
    "pytest",
]

[project.urls]
"Repository" = "https://github.com/mantidproject/vesuvio"
"Bug Tracker" = "https://github.com/mantidproject/vesuvio/issues"

[project.entry-points]
console_scripts = { mvesuvio = "EVSVesuvio.scripts:main" }

[tool.setuptools.packages.find]
include = ["EVSVesuvio*"]
namespaces = false

[tool.setuptools.package-data]
"EVSVesuvio.vesuvio_analysis.ip_files" = ["*.OPJ", "*.par", "*.DAT", "*.DAT3", "*.DAT6", "*.txt"]
"EVSVesuvio.config" = ["*.properties"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["EVSVesuvio/system_tests"]
filterwarnings = ["error"]

[tool.coverage.report]
include = [
    "*/EVSVesuvio/vesuvio_analysis/*",
]

omit = [
    "*tests*",
    "*unpackaged*",
]

fail_under = 0
show_missing = true
skip_empty = true

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{version}.dev{distance}"
dirty = "{version}+uncommitted"
distance-dirty = "{version}.dev{distance}+uncommitted"

[tool.versioningit.write]
file = "EVSVesuvio/__init__.py"